<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartScreenFragment">

        <data>
                <variable
                    name="viewModel"
                    type="com.example.spaceinvaders.StartScreenViewModel" />
        </data>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text=" Space Invaders "
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textStyle="italic"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button"/>


                <Button
                    android:id="@+id/newGameBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MenuButton"
                    android:text="@string/new_game"
                    android:onClick="@{() -> viewModel.onClick(0)}"
                    />


                <Button
                    android:id="@+id/multyplayerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MenuButton"
                    android:text="Multiplayer"
                    android:onClick="@{() -> viewModel.onClick(1)}"
                    />

                <Button
                    android:id="@+id/highscoreBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MenuButton"
                    android:text="@string/highscores"
                    android:onClick="@{() -> viewModel.onClick(2)}"
                    />

                <Button
                    android:id="@+id/Options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MenuButton"
                    android:text="@string/options"
                    android:onClick="@{() -> viewModel.onClick(3)}"
                    />

                <Button
                    android:id="@+id/About"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MenuButton"
                    android:text="@string/about"
                    android:onClick="@{() -> viewModel.onClick(4)}"
                    />

                <Button
                    android:id="@+id/Close"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MenuButton"
                    android:text="@string/close"
                    android:onClick="@{() -> viewModel.onClick(5)}"
                    />

        </LinearLayout>
</layout>
